# image-truth

./: .gitignore  EVIDENCE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  twelve-days-west-audit-report.md  twelve-days-west-legacy-heroes.md
fixtures/: SOURCES.md  g2_expected.json  g2_manifest.md  make_fixtures.py  truth.json
fixtures/base/: _meta.json
metrics/: e2e_results.json  model_comparison.json
scripts/: compare_models.py  run_e2e.py
src/image_truth/: __init__.py  cli.py  hashing.py  manifest.py  model.py  pipeline.py  report.py  vision.py
src/image_truth/checks/: c1_duplicate.py  c2_watermark.py  c3_location.py  c4_caption.py  c5_aesthetic.py
tests/: ci_smoke.py  test_c1_duplicate.py  test_c2_c5.py  test_c3_c4.py  test_fixtures.py  test_g2_cli.py  test_providers.py
