[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "image-truth"
version = "0.1.0"
description = "CI gate for image QA: duplicate, watermark, location-mismatch, and caption-mismatch detection for website/doc image manifests"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
vision = ["anthropic>=0.40"]
yaml = ["PyYAML>=6.0"]
all = ["pytesseract>=0.3.10", "anthropic>=0.40", "PyYAML>=6.0"]

[project.scripts]
image-truth = "image_truth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
